# robot-platform

./: CLAUDE.md  README.md  glossary.html  index.html
architecture/: data-flow-mission.html  platform-vs-application.html  system-context.html
deploy/: README.md
deploy/config/: platform_hal-bench.yaml  platform_hal.yaml
deploy/scripts/: switch-platform-config.sh
deploy/systemd/: rover-platform-hal.service  rover-teleop-web.service
deploy/udev/: 99-robot-platform.rules
docs/: SPEC-README.md
docs/architecture/: deployment.html  iteration-roadmap.html
docs/hardware/: hw-drone-001-drone-wiring.html  hw-pi5-001-rover-wiring.html  index.html
docs/interfaces/: icd-hal-cmd-vel-safe.html  icd-hal-odom.html  icd-mapping-georeference-srv.html  icd-mapping-mission-action.html  icd-mapping-retrieve-image-srv.html  icd-perception-detections.html  icd-safety-reset-srv.html  icd-safety-state.html  icd-xiao-http-api.html  index.html
docs/nodes/: anatomy-motor-driver.html  anatomy-yolo-detector.html  firmware-arducopter-config.html  firmware-xiao-bridge.html  index.html  integration-rtabmap.html  srs-drone-mission-coordinator.html  srs-geofence-enforcer.html  srs-georeferencer.html  srs-image-retriever.html  srs-imu-driver.html  srs-motor-driver.html  srs-safety-monitor.html  srs-system-monitor.html  srs-yolo-detector.html
docs/shared/: shared.css
docs/state-machines/: sm-drone-mission.html  sm-mission-executor.html
docs/verification/: field-test-protocol.html  test-hal-009.html  test-plan.html
firmware/xiao-bridge/: .gitignore  README.md  platformio.ini
interfaces/: icd-geofence-state.html  icd-hal-battery.html  icd-hal-cmd-vel-raw.html  icd-hal-cmd-vel-safe.html  icd-hal-estop-pressed.html  icd-hal-gps-fix.html  icd-hal-odom.html  icd-mapping-current-zone.html  icd-mapping-mission-action.html  icd-mission-rest-api.html  icd-mission-telemetry-ws.html  icd-perception-detections.html  icd-perception-obstacles.html  icd-perception-people.html
nodes/: anatomy-drone-mission-coordinator.html  anatomy-mission-api.html  anatomy-safety-monitor.html  firmware-ardurover-config.html  firmware-xiao-bridge.html  index.html  integration-nav2.html  integration-rtabmap.html  srs-boundary-ingester.html  srs-drone-mission-coordinator.html  srs-estop-monitor.html  srs-georeferencer.html  srs-image-retriever.html  srs-mission-api.html  srs-roboclaw-driver.html
requirements/: functional.html  index.html  interface.html  performance.html  traceability-matrix.html
ros_ws/src/platform_hal/: package.xml  setup.cfg  setup.py
ros_ws/src/platform_hal/launch/: platform_hal.launch.py
ros_ws/src/platform_hal/platform_hal/: gpio_backend.py  imu_backend.py  imu_calibrate.py  imu_driver.py  motor_driver.py  safety_monitor.py
ros_ws/src/platform_hal/test/: test_gpio_backend.py  test_hal_009.py  test_imu_calibrate.py  test_imu_driver.py  test_motor_driver.py  test_safety_integration.py  test_safety_monitor.py
ros_ws/src/platform_hal/test/fixtures/: imu_calibration_stub.yaml  mock_motor_driver.py
ros_ws/src/platform_msgs/: CMakeLists.txt  package.xml
ros_ws/src/platform_msgs/action/: RunMappingMission.action
ros_ws/src/platform_msgs/msg/: AerialImageMeta.msg  SafetyState.msg
ros_ws/src/platform_msgs/srv/: Georeference.srv  ResetSafety.srv  RetrieveLatestImage.srv
ros_ws/src/teleop_web/: package.xml  setup.cfg  setup.py
ros_ws/src/teleop_web/launch/: teleop_web.launch.py
ros_ws/src/teleop_web/web/: index.html
scripts/: bringup.sh  motor_check.py  motor_one.py  motor_one_bitbang.py  pub-vel.sh
shared/: shared.css  shared.js
spec-site/: SPEC-README.md  glossary.html  index.html
spec-site/architecture/: data-flow-mission.html  deployment.html  index.html  iteration-roadmap.html  layered-architecture.html  system-context.html
spec-site/hardware/: hw-pi5-001-rover-wiring.html  index.html
spec-site/interfaces/: icd-hal-battery.html  icd-hal-cmd-vel-safe.html  icd-hal-imu-data.html  icd-hal-imu-mag.html  icd-localization-pose.html  icd-mapping-aerial-image.html  icd-odometry-filtered.html  index.html
state-machines/: index.html  sm-geofence-enforcer.html  sm-safety-monitor.html
verification/: index.html  test-hal-009.html  test-plan.html  test-saf-016.html
(+37 files in other folders)
