<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>platform_hal</name>
  <version>0.1.0</version>
  <description>Hardware abstraction layer for the rover: motor_driver, imu_driver, safety_monitor.</description>
  <maintainer email="louisroig@gmail.com">Louis Roig</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-smbus2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
