<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_web</name>
  <version>0.1.0</version>
  <description>M1 minimum-viable teleop: browser joystick publishing /hal/cmd_vel_raw via rosbridge_websocket.</description>
  <maintainer email="louisroig@gmail.com">Louis Roig</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rosbridge_server</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
